--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="src/assets" href="/AliceRibeiroLogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alice Ribeiro Esteticista</title>
+    <title>Alice Ribeiro Esteticista - v1</title>
   </head>
   <body>
     <div id="root"></div>
