--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="src/assets" href="/AliceRibeiroLogo.ico" />
+    <link rel="icon" type="src/assets" href="AliceRibeiroLogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alice Ribeiro Esteticista</title>
   </head>
